# HivePilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PR_BODY.md  README.md  ROADMAP.md  docker-compose.yml  groups.yaml  model_profiles.yaml  pipelines.yaml  policies.yaml  projects.yaml  pyproject.toml  requirements.txt  roles.yaml  tasks.yaml
.claude/: settings.json
.github/workflows/: ci.yml
config/: model_profiles.yaml
deploy/helm/hivepilot/: Chart.yaml  README.md  values.yaml
deploy/kustomize/: README.md
deploy/kustomize/base/: deployment-bots-telegram.yaml  deployment-scheduler.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docs/: ARCHITECTURE.md  AUTOPILOT.md  CLI-REFERENCE.md  CONFIGURATION.md  DASHBOARD.md  DEBATE-AND-LESSONS.md  DEPLOY-PRODUCTION.md  DEPLOYMENT.md  GETTING-STARTED.md  INTEGRATIONS.md  PIPELINES-AND-ROLES.md  PLUGINS.md  RUNNERS.md  SECURITY.md  SKILLS.md  session-learnings.md
docs/v4/: 00_MASTER_SPEC.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONFIG.md  DEPLOYMENT-EXAMPLE.md  INTEGRATIONS.md  KUBERNETES.md  NOXYS.md  PLUGINS.md  REMOTE-EXECUTION.md  RUNBOOK.md  USAGE.md  WEBUI.md
docs/v4/01_VISION/: COMPANY_VISION.md  OPERATING_MODEL.md
docs/v4/02_AGENTS/: CEO.md  CHIEF_OF_STAFF.md  CISO.md  CTO.md  DEVELOPER.md  DOCUMENTATION.md  QA.md  REVIEWER.md
docs/v4/03_OBSIDIAN/: ADR_SPEC.md  OBSIDIAN_ARCHITECTURE.md
docs/v4/04_EXECUTION/: PIPELINES.md  STATE_MACHINE.md
examples/: roles.yaml
examples/acme/: README.md
examples/n8n/: README.md  hivepilot-approve.json  hivepilot-events.json
examples/noxys/: README.md  pipelines.yaml  policies.yaml  roles.yaml  schedules.yaml
hivepilot/: agent_rules.py  banner.py  cli.py  config.py  engines.py  github.py  graph.py  models.py  orchestrator.py  pipelines.py  plugin_capabilities.py  plugins.py  prompts.py  registry.py  roles.py  runner.py  settings.py  shell.py  templates.py  utils.py
hivepilot/graph_sources/: __init__.py  pipeline_source.py  plugins_source.py  skills_source.py
hivepilot/observability/: __init__.py  tracing.py
hivepilot/prompts/: concierge.md
hivepilot/runners/: ansible_runner.py  atlantis_runner.py  base.py  chef_runner.py  claude_runner.py  container_runner.py  cursor_runner.py  helm_runner.py  iac_runner.py  internal_runner.py  kubectl_runner.py  kustomize_runner.py  langchain_runner.py  openrouter_runner.py  packer_runner.py  prompt_cli_runner.py  puppet_runner.py  salt_runner.py  shell_runner.py  worker_runner.py
hivepilot/scaffold/: playbooks.py  templates.py
hivepilot/services/: __init__.py  agent_checks.py  agent_install.py  agent_report.py  analytics_service.py  api_service.py  artifact_service.py  async_run_service.py  auditor_service.py  autopilot_policy.py  autopilot_queue.py  chatops_service.py  concierge_service.py  config_provenance.py  config_service.py  config_validation.py  config_writer.py  db.py  debate_service.py  discord_bot.py  discovery_service.py  drift_schedule.py  drift_service.py  file_ownership.py  git_service.py  github_service.py  headroom_metrics.py  init_service.py  interaction_service.py  knowledge_service.py  lessons_service.py  linear_service.py  lint_service.py  memory_service.py  metrics.py  notification_service.py  notion_service.py  obsidian_service.py  pipeline_service.py  plugin_index.py  (+29 more)
hivepilot/ui/: __init__.py  dashboard.py  formatting.py  plugin_manager.py  plugin_persist.py
hivepilot/utils/: env.py  io.py  logging.py  prompt_vars.py  remote.py  sandbox.py  shell.py  test_prompt_vars.py  validation.py
hivepilot/webui/: __init__.py
plugins/: __init__.py  antigravity.py  autopilot_panel.py  bitwarden.py  codex.py  cursor.py  drift_graph_source.py  drift_panel.py  example_graph_source.py  gemini.py  gh.py  headroom.py  headroom_panel.py  herdr.py  hugo.py  improve.py  infisical.py  kimi_cli.py  kms.py  mem0.py  obsidian.py  ollama.py  onepassword.py  opencode.py  pi.py  qwen_code.py  rtk.py  sample.py  sample_skill.py  secrets_trust_graph_source.py  shadcn.py  test_headroom.py  test_obsidian.py  test_rtk.py  test_sample_skill.py  tmux.py  vaultwarden.py
prompts/: architecture_review.md  docs.md  docs_rewrite.md  refactor.md  security_review.md
prompts/agents/: auditor.md  ceo.md  chief_of_staff.md  ciso.md  cto.md  developer.md  documentation.md  qa.md  reviewer.md
scripts/: check_public_safe.py  install-alpine.sh  install.sh  public-denylist.txt  setup-openrc.sh
tasks/: agent-challenge-plan.md  ask-command-plan.md  backlog.md  cache-plan.md  config-edit-cli-plan.md  message-formatting-plan.md  phase2-plan.md  plugin-system-plan.md  prod-readiness-plan.md  quota-resilience-plan.md  stream-and-challenge-plan.md  todo.md
tasks/sprints/: 2.0-pipeline-execution.md  2.1-role-runner-binding.md  2.2-interaction-logging.md  2.3-debate-engine-adr.md
tests/: conftest.py  test_agent_challenges.py  test_agent_checks.py  test_agent_context.py  test_agent_install.py  test_agent_plugin_migration.py  test_agent_report.py  test_agent_requests.py  test_agent_rules.py  test_agent_rules_config.py  test_analytics_service.py  test_ansible_runner.py  test_antigravity.py  test_api_import_no_optional_deps.py  test_api_memory.py  test_api_service.py  test_artifact_service.py  test_async_run_service.py  test_async_runs_endpoint.py  test_atlantis_runner.py  test_audit.py  test_auditor_service.py  test_autopilot_panel.py  test_autopilot_policy.py  test_autopilot_queue.py  test_banner.py  test_base.py  test_cancel_run.py  test_challenge_arbiter.py  test_challenge_rebuttal.py  test_chatops_service.py  test_check_public_safe.py  test_chef_runner.py  test_claude_api_mode.py  test_claude_runner.py  test_cli.py  test_cli_agents.py  test_cli_autopilot.py  test_cli_config_commands.py  test_cli_config_get.py  (+230 more)
tests/fixtures/: entry_point_plugin.py
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
web/src/: App.test.tsx  App.tsx
workflows/: __init__.py  crewai_docs.py  langgraph_docs.py
(+158 files in other folders)
