[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hivepilot"
version = "0.2.0"
description = "AI orchestration for development projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Lightweight core — fast startup, no ML models, no cloud SDKs
  "typer>=0.16,<1.0",
  "rich>=13.7,<14.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "PyYAML>=6.0,<7.0",
  "gitpython>=3.1,<4.0",
  "structlog>=24.1,<25.0",
  "tenacity>=8.2,<9.0",
  "questionary>=2.0,<3.0",
  "python-dotenv>=1.0,<2.0",
  "requests>=2.31,<3.0",
]

[project.scripts]
hivepilot = "hivepilot.cli:app"

[project.optional-dependencies]
langchain = [
  "langchain>=0.2,<0.3",
  "langchain-community>=0.2,<0.3",
  "faiss-cpu>=1.7,<2.0",
  "nltk>=3.8,<4.0",
]
langgraph = [
  "langgraph>=0.0.59,<1.0",
]
crewai = [
  "crewai>=0.28,<1.0",
]
dashboard = [
  "textual>=0.47,<1.0",
]
api = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.24,<1.0",
  "prometheus-client>=0.17,<1.0",
  "itsdangerous>=2.1,<3.0",
]
notifications = [
  "python-telegram-bot>=20.7,<21.0",
]
slack = [
  "slack-bolt>=1.18,<2.0",
]
discord = [
  "discord.py>=2.3,<3.0",
  "PyNaCl>=1.5,<2.0",
]
cloud = [
  "boto3>=1.34,<2.0",
]
containers = [
  "docker>=7.0,<8.0",
]
full = [
  "langchain>=0.2,<0.3",
  "langchain-community>=0.2,<0.3",
  "faiss-cpu>=1.7,<2.0",
  "nltk>=3.8,<4.0",
  "langgraph>=0.0.59,<1.0",
  "crewai>=0.28,<1.0",
  "textual>=0.47,<1.0",
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.24,<1.0",
  "prometheus-client>=0.17,<1.0",
  "itsdangerous>=2.1,<3.0",
  "python-telegram-bot>=20.7,<21.0",
  "slack-bolt>=1.18,<2.0",
  "discord.py>=2.3,<3.0",
  "PyNaCl>=1.5,<2.0",
  "boto3>=1.34,<2.0",
  "docker>=7.0,<8.0",
]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.4,<1.0",
  "mypy>=1.10,<2.0",
  "bandit[toml]>=1.7,<2.0",
  "pip-audit>=2.7,<3.0",
  "detect-secrets>=1.5,<2.0",
  "pre-commit>=3.7,<4.0",
  # Test-time stubs for optional deps
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.24,<1.0",
  "prometheus-client>=0.17,<1.0",
  "itsdangerous>=2.1,<3.0",
  "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = [
  "B101",  # assert used in tests
  "B603",  # subprocess without shell — we explicitly avoid shell=True
  "B607",  # partial path for executables — acceptable for configurable commands
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hivepilot*"]
