[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hivepilot"
version = "0.2.0"
description = "AI orchestration for development projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Lightweight core — fast startup, no ML models, no cloud SDKs
  "typer>=0.16,<1.0",
  "rich>=13.7,<14.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "PyYAML>=6.0,<7.0",
  "gitpython>=3.1,<4.0",
  "structlog>=24.1,<25.0",
  "tenacity>=8.2,<9.0",
  "questionary>=2.0,<3.0",
  "python-dotenv>=1.0,<2.0",
  "requests>=2.31,<3.0",
  "ruamel.yaml>=0.18",
]

[project.scripts]
hivepilot = "hivepilot.cli:app"

# Third-party plugin packages declare, in their OWN pyproject.toml:
# [project.entry-points."hivepilot.plugins"]
# my_plugin = "my_package:register"
# HivePilot's own pyproject.toml declares nothing here — it is not a plugin
# of itself. See hivepilot/plugins.py::load_entry_point_plugins.

[project.optional-dependencies]
# Optional knowledge/RAG stack: enables embedding-based context in
# knowledge_service (otherwise it falls back to a plain file read) and the
# langchain_runner. sentence-transformers pulls in torch (large) — opt-in only.
langchain = [
  "langchain>=0.2,<0.3",
  "langchain-community>=0.2,<0.3",
  "faiss-cpu>=1.7,<2.0",
  "nltk>=3.8,<4.0",
  "sentence-transformers>=2.2,<4.0",
  "torch>=2.0,<3.0",
]
langgraph = [
  "langgraph>=0.0.59,<1.0",
]
crewai = [
  "crewai>=0.28,<1.0",
]
dashboard = [
  "textual>=0.47,<1.0",
]
api = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.24,<1.0",
  "prometheus-client>=0.17,<1.0",
  "itsdangerous>=2.1,<3.0",
]
notifications = [
  "python-telegram-bot>=21.0,<22.0",
]
slack = [
  "slack-bolt>=1.18,<2.0",
]
discord = [
  "discord.py>=2.3,<3.0",
  "PyNaCl>=1.5,<2.0",
]
cloud = [
  "boto3>=1.34,<2.0",
]
containers = [
  "docker>=7.0,<8.0",
]
# Optional PDF rendering for GET /v1/analytics/*?format=pdf. Lazy-imported
# inside api_service._pdf_response — analytics CSV/JSON export works fine
# without this extra; PDF export returns a clear 501 if it's missing.
pdf = [
  "fpdf2>=2.7,<3.0",
]
# Mirador web UI (hivepilot/webui/) — serves the pre-built React/Vite bundle
# committed under hivepilot/webui/static/ (see [tool.setuptools.package-data]
# below) at GET /ui, gated by HIVEPILOT_ENABLE_WEBUI. This is a thin/marker
# extra: StaticFiles/FileResponse come from starlette, already pulled in by
# the `api` extra (fastapi) — no new runtime dependency. `webui` depends on
# `api` because serving requires the FastAPI app to exist in the first
# place. No Node/npm is required at install or run time — the bundle is
# already built; rebuild it via `cd web && npm run build` only if you're
# changing the frontend itself.
webui = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.24,<1.0",
  "prometheus-client>=0.17,<1.0",
  "itsdangerous>=2.1,<3.0",
]
# Phase 18 — OpenTelemetry distributed tracing (hivepilot/observability/
# tracing.py), gated behind HIVEPILOT_ENABLE_TRACING (default off). Not
# required for core install: `init_tracing`/`get_tracer` import-guard the
# SDK internally, so `pip install hivepilot` (no extra) works unchanged and
# tracing stays a no-op. `pip install hivepilot[tracing]` to emit real spans
# via OTLP to a collector (Jaeger, Zipkin, Grafana Tempo, ...).
tracing = [
  "opentelemetry-api>=1.24,<2.0",
  "opentelemetry-sdk>=1.24,<2.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.24,<2.0",
]
full = [
  "langchain>=0.2,<0.3",
  "langchain-community>=0.2,<0.3",
  "faiss-cpu>=1.7,<2.0",
  "nltk>=3.8,<4.0",
  "sentence-transformers>=2.2,<4.0",
  "torch>=2.0,<3.0",
  "langgraph>=0.0.59,<1.0",
  "crewai>=0.28,<1.0",
  "textual>=0.47,<1.0",
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.24,<1.0",
  "prometheus-client>=0.17,<1.0",
  "itsdangerous>=2.1,<3.0",
  "python-telegram-bot>=21.0,<22.0",
  "slack-bolt>=1.18,<2.0",
  "discord.py>=2.3,<3.0",
  "PyNaCl>=1.5,<2.0",
  "boto3>=1.34,<2.0",
  "docker>=7.0,<8.0",
  "fpdf2>=2.7,<3.0",
  "opentelemetry-api>=1.24,<2.0",
  "opentelemetry-sdk>=1.24,<2.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.24,<2.0",
]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.4,<1.0",
  "mypy>=1.10,<2.0",
  "types-PyYAML>=6.0,<7.0",
  "bandit[toml]>=1.7,<2.0",
  "pip-audit>=2.7,<3.0",
  "detect-secrets>=1.5,<2.0",
  "pre-commit>=3.7,<4.0",
  # Test-time stubs for optional deps
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.24,<1.0",
  "prometheus-client>=0.17,<1.0",
  "itsdangerous>=2.1,<3.0",
  "httpx>=0.27,<1.0",
  "fpdf2>=2.7,<3.0",
  # Test-only: decode ?format=pdf output to assert tenant-scoped content
  # (no cross-tenant leak), not just a 200 + magic-bytes check.
  "pypdf>=4.0,<7.0",
  # Phase 18 tracing — dev/test install includes the SDK so
  # tests/test_tracing.py's enabled-path (InMemorySpanExporter) tests run
  # in CI; core install stays extra-free (see the `tracing` extra above).
  "opentelemetry-api>=1.24,<2.0",
  "opentelemetry-sdk>=1.24,<2.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.24,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
# Optional / untyped third-party libs (yaml without types-PyYAML, requests,
# langchain, torch, …): don't fail the typecheck hook on missing stubs.
disable_error_code = ["import-untyped"]
# Prevent "Source file found twice under different module names" when running
# mypy over both `hivepilot` and `tests` from the project root (no __init__.py
# in tests/). explicit_package_bases tells mypy to resolve modules relative to
# the roots listed in mypy_path rather than treating bare filenames as roots too.
explicit_package_bases = true
namespace_packages = true
mypy_path = "."

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = [
  "B101",  # assert used in tests
  "B603",  # subprocess without shell — we explicitly avoid shell=True
  "B607",  # partial path for executables — acceptable for configurable commands
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hivepilot*"]

[tool.setuptools.package-data]
# Ship the pre-built Mirador web UI bundle (committed, not generated at
# build time — see web/vite.config.ts's build.outDir) inside the wheel, so
# `pip install hivepilot[webui]` needs zero Node. "**/*" covers the nested
# assets/ subdirectory (JS/CSS/font chunks) as well as index.html/favicon.svg.
"hivepilot.webui" = ["static/**/*"]
